Intl.DateTimeFormat returns resolvedOptions in the wrong order https://bugs.webkit.org/show_bug.cgi?id=203297

Reviewed by Yusuke Suzuki.

JSTests:

* test262/expectations.yaml:
Mark two test cases as passing.

Source/JavaScriptCore:

See table here:
https://tc39.es/ecma402/#table-datetimeformat-resolvedoptions-properties

* runtime/IntlDateTimeFormat.cpp:
(JSC::IntlDateTimeFormat::resolvedOptions):


Canonical link: https://commits.webkit.org/217008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251815 268f45cc-cd09-0410-ab3c-d52691b4dbfc